# Notepad

./: CMakeLists.txt  Collection.cpp  Collection.h  CollectionCount.cpp  CollectionCount.h  Controller.cpp  Controller.h  MainWindow.cpp  MainWindow.h  Note.cpp  Note.h  Observer.h  Subject.h  main.cpp
